tools/tree-sitter-sr/grammar.js
    source_file: $ => seq(
      optional($.package_declaration),
      repeat($._item)
    ),

    _item: $ => choice(
      $.declaration,
      $.statement,
    ),

    package_declaration: $ => seq(
      'package',
      field('name', $.path)
    ),

    path: $ => seq(
      field('root', $.identifier),
      repeat(seq('.', field('segment', $.identifier)))
    ),

    declaration_modifier: $ => 'pub',

    attribute: $ => seq(
      '@[',
      optional(commaSep1($.attribute_argument)),
      ']'
    ),

    attribute_argument: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.attribute_value)))
    ),

    const_declaration: $ => prec.left(1, seq(
      repeat(field('attribute', $.attribute)),
      repeat(field('modifier', $.declaration_modifier)),
      field('pattern', $.pattern),
      choice(
        seq(
          ':',
          field('type', $.type),
          ':',
          field('value', $.expression)
        ),
        seq(
          '::',
          repeat(field('value_attribute', $.attribute)),
          field('value', choice($.type, $.expression))
        )
      )
    )),

    var_declaration: $ => prec.left(1, seq(
      repeat(field('attribute', $.attribute)),
      repeat(field('modifier', $.declaration_modifier)),
      field('pattern', $.pattern),
      choice(
        seq(
          ':',
          field('type', $.type),
          '=',
          field('value', $.expression)
        ),
        seq(
          ':=',
          field('value', $.expression)
        )
      )
    )),

    statement: $ => choice(
      $.assignment_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.defer_statement,
      $.errdefer_statement,
      $.insert_statement,
      $.expression_statement,
    ),

    loop_label: $ => prec(1, seq(field('label', $.identifier), ':')),

    mlir_expression: $ => seq(
      'mlir',
      optional(field('kind', $.identifier)),
      field('body', $.mlir_body)
    ),

    asm_block: $ => seq(
      'asm',
      field('body', $.block)
    ),

    mlir_body: $ => seq(
      '{',
      repeat(choice(
        $.mlir_body,
        $.mlir_text
      )),
      '}'
    ),

    mlir_text: $ => token(/[^{}]+/),

    return_statement: $ => prec.right(seq('return', optional($.expression))),

    break_statement: $ => choice(
      prec.left(1, seq('break', ':', field('label', $.identifier), field('value', $._break_value))),
      seq('break', ':', field('label', $.identifier)),
      prec.left(-1, seq('break', field('value', $._break_value))),
      'break'
    ),

    _break_value: $ => choice(
      $.literal,
      alias($._identifier_no_mlir, $.identifier)
    ),

    continue_statement: $ => seq(
      'continue',
      optional(seq(':', field('label', $.identifier)))
    ),

    defer_statement: $ => prec(1, seq('defer', field('handler', choice($.block, $.expression)))),

    errdefer_statement: $ => prec(1, seq('errdefer', field('handler', choice($.block, $.expression)))),

    insert_statement: $ => seq('insert', field('value', $.expression)),

    expression_statement: $ => $.expression,

    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.fn_expression,
      $.proc_expression,
      $.closure_expression,
      $.async_expression,
      $.tuple_expression,
      $.array_expression,
      $.parenthesized_expression,
      $.block
    ),

    parenthesized_expression: $ => seq('(', $.expression, ')'),

    block: $ => seq(
      '{',
      repeat($._block_item),
      '}'
    ),

    _block_item: $ => choice(
      $.declaration,
      $.statement
    ),

    fn_expression: $ => choice(
      prec(1, seq(
        repeat(field('modifier', choice('extern', 'async'))),
        'fn',
        field('parameters', $.parameter_list),
        optional(field('return_type', $.type)),
        field('body', choice($.block, $.asm_block))
      )),
      seq(
        repeat(field('modifier', choice('extern', 'async'))),
        'fn',
        field('parameters', $.parameter_list),
        optional(field('return_type', $.type))
      )
    ),

    proc_expression: $ => choice(
      prec(1, seq(
        repeat(field('modifier', choice('extern', 'async'))),
        'proc',
        field('parameters', $.parameter_list),
        optional(field('return_type', $.type)),
        field('body', choice($.block, $.asm_block))
      )),
      seq(
        repeat(field('modifier', choice('extern', 'async'))),
        'proc',
        field('parameters', $.parameter_list),
        optional(field('return_type', $.type))
      )
    ),

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')'
    ),

    parameter: $ => choice(
      seq(
        repeat(field('attribute', $.attribute)),
        repeat(field('modifier', $.parameter_modifier)),
        field('pattern', $.pattern),
        ':',
        field('type', $.type),
        optional(seq('=', field('default_value', $.expression)))
      ),
      seq(
        repeat(field('attribute', $.attribute)),
        repeat(field('modifier', $.parameter_modifier)),
        field('type', $.type),
        optional(seq('=', field('default_value', $.expression)))
      )
    ),

    import_expression: $ => prec(PREC.postfix, seq(
      'import',
      field('path', choice($.string_literal, $.identifier))
    )),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $.expression),
      field('arguments', $.argument_list)
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep($.expression)),
      ')'
    ),

    member_expression: $ => prec(PREC.member, seq(
      field('object', $.expression),
      '.',
      field('property', choice($.identifier, $.integer_literal))
    )),

    cast_expression: $ => prec(PREC.postfix, seq(
      field('value', $.expression),
      '.',
      choice(
        seq('(', field('type', $.type), ')'),
        seq('^', field('type', $.type)),
        seq('|', field('type', $.type)),
        seq('%', field('type', $.type)),
        seq('?', field('type', $.type))
      )
    )),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $.expression),
      field('consequence', $.block),
      optional(seq('else', field('alternative', choice($.block, $.if_expression))))
    )),

    while_expression: $ => prec.right(seq(
      optional($.loop_label),
      'while',
      field('condition', choice(
        $.expression,
        seq(
          'is',
          field('pattern', $.pattern),
          ':=',
          field('value', $.expression)
        )
      )),
      field('body', $.block)
    )),

    for_expression: $ => prec.right(seq(
      optional($.loop_label),
      'for',
      field('pattern', $.pattern),
      'in',
      field('iterable', $.expression),
      field('body', $.block)
    )),

    match_expression: $ => seq(
      'match',
      field('value', $.expression),
      '{',
      optional(commaSep1($.match_arm)),
      '}'
    ),

    match_arm: $ => prec.right(1, seq(
      field('pattern', $.pattern),
      '=>',
      field('body', choice($.block, $.expression))
    )),

    comptime_expression: $ => prec.right(1, seq(
      'comptime',
      field('body', choice($.block, $.expression))
    )),

    code_expression: $ => prec(1, seq('code', field('body', $.block))),

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('+', '-', '!', '&', '*')),
      field('argument', $.expression)
    )),

    binary_expression: $ => choice(
      ...binaryExpression($, ['or'], PREC.or),
      ...binaryExpression($, ['and'], PREC.and),
      ...binaryExpression($, ['orelse'], PREC.orelse),
      ...binaryExpression($, ['catch'], PREC.catch),
      ...binaryExpression($, ['|'], PREC.bitwise_or),
      ...binaryExpression($, ['^'], PREC.bitwise_xor),
      ...binaryExpression($, ['&'], PREC.bitwise_and),
      ...binaryExpression($, ['==', '!='], PREC.equality),
      ...binaryExpression($, ['<', '<=', '>', '>='], PREC.relational),
      ...binaryExpression($, ['..', '..='], PREC.range),
      ...binaryExpression($, ['<<', '>>'], PREC.shift),
      ...binaryExpression($, ['+', '-'], PREC.additive),
      ...binaryExpression($, ['*', '/', '%'], PREC.multiplicative)
    ),

    literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
    ),

    integer_literal: $ => token(choice(
      BINARY_DIGITS,
      OCTAL_DIGITS,
      HEX_DIGITS,
      DECIMAL_DIGITS
    )),

    float_literal: $ => token(prec(1, choice(
      FLOAT_DECIMAL,
      FLOAT_DECIMAL_EXP,
      FLOAT_DECIMAL_SUFFIX,
      FLOAT_LEADING_DOT,
      FLOAT_EXPONENT
    ))),

    string_literal: $ => token(choice(
      seq('"', repeat(choice(/[^\\"\n]/, /\\./)), '"'),
      seq('b"', repeat(choice(/[^\\"\n]/, /\\./)), '"'),
      seq('r"', repeat(/[^"]/), '"'),
      seq('br"', repeat(/[^"]/), '"'),
      seq('r#"', repeat(choice(/[^"]/, seq('"', /[^#]/))), '"#'),
      seq('br#"', repeat(choice(/[^"]/, seq('"', /[^#]/))), '"#')
    )),

    char_literal: $ => token(seq(optional('b'), '\'', choice(/[^\\'\n]/, /\\./), '\'')),

    boolean_literal: $ => choice('true', 'false'),

    struct_type: $ => seq(
      'struct',
      field('body', $.struct_body)
    ),

    struct_body: $ => seq(
      '{',
      optional(commaSep1($.struct_field)),
      '}'
    ),

    struct_field: $ => seq(
      repeat(field('attribute', $.attribute)),
      optional(field('modifier', $.declaration_modifier)),
      field('name', $.identifier),
      ':',
      field('type', $.type)
    ),

    union_type: $ => seq(
      'union',
      field('body', $.union_body)
    ),

    union_body: $ => seq(
      '{',
      optional(commaSep1($.union_field)),
      '}'
    ),

    union_field: $ => seq(
      repeat(field('attribute', $.attribute)),
      field('name', $.identifier),
      ':',
      field('type', $.type)
    ),

    enum_type: $ => seq(
      'enum',
      optional(seq('(', field('base_type', $.type), ')')),
      field('body', $.enum_body)
    ),

    enum_body: $ => seq(
      '{',
      optional(commaSep1($.enum_variant)),
      '}'
    ),

    enum_variant: $ => seq(
      repeat(field('attribute', $.attribute)),
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression)))
    ),

    variant_type: $ => seq(
      'variant',
      field('body', $.variant_body)
    ),

    variant_body: $ => seq(
      '{',
      optional(commaSep1($.variant_case)),
      '}'
    ),

    variant_case: $ => seq(
      repeat(field('attribute', $.attribute)),
      field('name', $.identifier),
      optional(field('payload', $.variant_payload))
    ),

    variant_payload: $ => choice(
      seq('(', optional(commaSep1($.type)), ')'),
      seq('{', optional(commaSep1($.struct_field)), '}')
    ),

    pointer_type: $ => seq(
      '*',
      repeat(field('qualifier', $.pointer_qualifier)),
      field('type', $.type)
    ),

    type_identifier: $ => choice(
      $.type_path,
      $.identifier
    ),

    identifier: $ => token(prec(-1, /[_A-Za-z][_A-Za-z0-9]*/)),
